Agregando Repository, Service, Imp, Controller
CategoriaLibro
DetalleLibro
Editorial
EstadoLibo